fix wrapper on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ body {
 
 @media screen and (max-width: 450px) {
   .wrapper {
-    width: 50%;
+    width: 58%;
   }
 }
 
